<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Version Strings -->
    <string name="version_name">v%s</string>
    <string name="version_config">version-code-config</string>

    <!-- Manifest -->
    <string name="app_name">VocabuLazy</string>
    <string name="label_cover_activity">VocabuLazy</string>
    <string name="label_main_menu_activity">MainMenuActivity</string>
    <string name="label_exam_activity">ExamActivity</string>
    <string name="label_player_activity">PlayerActivity</string>
    <string name="label_search_activity">SearchActivity</string>

    <string name="flurry_api_key">8FFFFCV6XB4K9DGY4FS5</string>

    <!-- Fragment Label for Google Analytics -->
    <string name="ga_tag_cover_dialog">C.DIALOG</string>
    <string name="ga_tag_cover">COVER</string>
    <string name="ga_tag_exam_index">EXAM</string>
    <string name="ga_tag_exam_book">E.HOME</string>
    <string name="ga_tag_exam_lesson">E.UNIT</string>
    <string name="ga_tag_exam_note">E.LIST</string>
    <string name="ga_tag_exam">E.QUESTION</string>
    <string name="ga_tag_exam_result">E.RESULT</string>
    <string name="ga_tag_info">INFO</string>
    <string name="ga_tag_player">PLAYLIST</string>
    <string name="ga_tag_usr_note_dialog">L.EDIT</string>
    <string name="ga_tag_usr_note">LIST</string>
    <string name="ga_tag_voc_book">HOME</string>
    <string name="ga_tag_voc_dialog">H.DIALOG</string>
    <string name="ga_tag_voc_lesson">UNIT</string>
    <string name="ga_tag_search_dialog">S.DIALOG</string>
    <string name="ga_tag_search">SEARCH</string>

    <!-- menu -->
    <string name="menu_main_menu_action_search">搜尋</string>
    <string name="menu_main_menu_action_to_player">前往Player</string>

    <!-- widget -->
    <!-- main_menu -->
    <string name="main_menu_exam_index_textbook">七千單字</string>
    <string name="main_menu_exam_index_note">自訂清單</string>
    <string-array name="main_menu_tab_title">
        <item>七千單字</item>
        <item>自訂清單</item>
        <item>測驗特區</item>
        <item>關於我們</item>
    </string-array>
    <!-- main menu textbook -->
    <string name="textbook_group_title">參考書</string>
    <string name="textbook_group_subtitle">難度</string>
    <string name="textbook_child_title">單元</string>
    <!-- main menu note -->
    <string name="note_index">0</string>
    <string name="note_group_default_text">筆記</string>
    <string name="note_child_default_text">選項</string>
    <string-array name="note_child">
        <item>播放清單</item>
        <item>重新命名</item>
        <item>複製清單</item>
        <item>刪除清單</item>
    </string-array>
    <string name="note_rename_dialog_title">重新命名清單</string>
    <string name="note_rename_dialog_hint">原清單名稱</string>
    <string name="note_rename_dialog_confirm">確定</string>
    <string name="note_rename_dialog_cancel">取消</string>
    <string name="note_delete_dialog_title">確定刪除此清單?</string>
    <string name="note_delete_dialog_subtitle">清單名稱</string>
    <string name="note_delete_dialog_confirm">確定</string>
    <string name="note_delete_dialog_cancel">取消</string>
    <string name="note_create_dialog_title">新增筆記清單</string>
    <string name="note_create_dialog_hint">輸入欲新增清單名稱</string>
    <string name="note_create_dialog_confirm">確定</string>
    <string name="note_create_dialog_cancel">取消</string>
    <!-- main menu exam -->
    <!-- main menu info -->
    <string name="info_rate_us">給我們評價</string>
    <string name="info_report">回報問題</string>
    <string name="info_guide">新手導引</string>
    <string name="info_terms_conditions">服務條款</string>
    <string name="info_wishcan_introduction">WishCan介紹</string>
    <string name="info_goto_market_message">前往Google Play商店給我們評價！</string>
    <string name="info_alert_dialog_positive">前往</string>
    <string name="info_alert_dialog_negative">不用了</string>
    <string name="info_report_page_title">意見回饋</string>
    <string name="info_report_page_hint">我覺得&#8230;</string>
    <string name="info_report_page_send">送出</string>
    <string name="info_report_page_cancel">取消</string>
    <!-- exam -->
    <string name="exam_dialog_voc_too_less_yes">確認</string>
    <string name="exam_dialog_voc_too_less_title">請新增至少一個單字</string>

    <!-- player -->
    <string name="player_option_tab_0">自訂模式</string>
    <string name="player_option_tab_1">睡眠模式</string>
    <string name="player_option_tab_2">通勤模式</string>
    <string name="player_option_second_chinese">間隔秒數</string>
    <string name="player_option_second">second</string>
    <string name="player_option_frequency_chinese">播放次數</string>
    <string name="player_option_frequency">frequency</string>
    <string name="player_option_speed_chinese">播放速度</string>
    <string name="player_option_speed">speed</string>
    <string name="player_option_play_time_chinese">播放時間</string>
    <string name="player_option_play_time">play-time</string>
    <string name="player_dialog_add_voc_to_note_title">加入筆記清單</string>
    <string name="player_dialog_add_voc_to_note_yes">選擇</string>
    <string name="player_dialog_add_voc_to_note_no">取消</string>
    <string name="player_dialog_new_note_title">新增筆記清單</string>
    <string name="player_dialog_new_note_hint">為筆記命名&#8230;</string>
    <string name="player_dialog_new_note_yes">選擇</string>
    <string name="player_dialog_new_note_no">取消</string>
    <string name="player_dialog_voc_too_less_yes">確認</string>
    <string name="player_dialog_voc_too_less_title">請新增至少一個單字</string>
    <string name="player_dialog_prank_yes">確認</string>
    <string name="player_dialog_prank_title">目前還不支援例句播放</string>
    <string name="player_dialog_prank_msg_1">再按1次即將成為開發人員</string>
    <string name="player_dialog_prank_msg_2">真的想成為開發人員嗎?</string>
    <string name="player_dialog_prank_msg_3">你確定?</string>
    <string name="player_dialog_prank_msg_4">...</string>
    <!-- search -->
    <string name="search_menu_item">Search Menu Item</string>
    <string name="search_dialog_add_voc_to_note_title">加入筆記清單</string>
    <string name="search_dialog_add_voc_to_note_yes">選擇</string>
    <string name="search_dialog_add_voc_to_note_no">取消</string>
    <string name="search_dialog_new_note_title">新增筆記清單</string>
    <string name="search_dialog_new_note_hint">為筆記命名&#8230;</string>
    <string name="search_dialog_new_note_yes">選擇</string>
    <string name="search_dialog_new_note_no">取消</string>
    <!-- cover -->
    <string name="cover_dialog_title">尚未安裝Google文字轉語音引擎</string>
    <string name="cover_dialog_message">為了取得最佳使用體驗，請至商店下載並安裝「Google 文字轉語音引擎」。\n\n若沒有安裝語音引擎，部分語音將無法順利播送哦！</string>
    <string name="cover_dialog_button_cancel">不要安裝</string>
    <string name="cover_dialog_button_confirm">前往 Google Play</string>
    <string name="cover_dialog_update_title">版本 %s 更新內容</string>
    <string name="cover_dialog_update_message">
        1. 我們現在有多益以及托福單字了！
        2. 改善效能。
        3. 修正改變系統字體時可能造成的程式崩潰。
    </string>
    <string name="cover_dialog_update_positive_button">我知道了</string>

</resources>
