<?xml version="1.0" encoding="utf-8"?>
<wishcantw.vocabulazy.mainmenu.note.view.NoteRenameDialogView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/player_dialog_new_note_background">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/player_dialog_new_note_content_width"
        android:layout_height="@dimen/player_dialog_new_note_content_height"
        android:translationZ="@dimen/note_dialog_rename_translation_z">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/player_dialog_add_voc_to_note_content_padding"
            android:paddingLeft="@dimen/player_dialog_add_voc_to_note_content_padding"
            android:paddingRight="@dimen/player_dialog_add_voc_to_note_content_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_rename_dialog_title"
                android:textSize="@dimen/player_dialog_new_note_content_text_size"
                android:textColor="#ff444b53" />

            <EditText
                android:id="@+id/note_rename_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_rename_dialog_hint"
                android:textSize="@dimen/player_dialog_new_note_content_text_size"
                android:textColorHint="#ff9fa0a0" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <android.support.v7.widget.CardView
                    android:layout_margin="5dp"
                    android:layout_width="72dp"
                    android:layout_height="48dp"
                    android:id="@+id/note_rename_cancel">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_rename_dialog_cancel"
                        android:textSize="@dimen/player_dialog_add_voc_to_note_content_text_size"
                        android:textColor="@color/green_1"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_margin="5dp"
                    android:layout_width="72dp"
                    android:layout_height="48dp"
                    android:id="@+id/note_rename_confirm">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_rename_dialog_confirm"
                        android:textSize="@dimen/player_dialog_add_voc_to_note_content_text_size"
                        android:textColor="@color/green_1"
                        android:layout_gravity="center"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</wishcantw.vocabulazy.mainmenu.note.view.NoteRenameDialogView>