<?xml version="1.0" encoding="utf-8"?>
<wishcantw.vocabulazy.activities.player.view.PlayerNewNoteDialogView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/player_dialog_new_note_background">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/player_dialog_new_note_content_width"
        android:layout_height="@dimen/player_dialog_new_note_content_height"
        android:translationZ="@dimen/player_dialog_new_note_content_translation_z">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/player_new_note_dialog_yes_no_container"
                android:paddingTop="@dimen/player_dialog_add_voc_to_note_content_padding"
                android:paddingLeft="@dimen/player_dialog_add_voc_to_note_content_padding"
                android:paddingRight="@dimen/player_dialog_add_voc_to_note_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_dialog_new_note_title"
                    android:textSize="@dimen/player_dialog_new_note_content_text_size"
                    android:textColor="#ff444b53"/>

                <EditText
                    android:id="@+id/player_new_note_dialog_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/player_dialog_new_note_hint"
                    android:textSize="@dimen/player_dialog_new_note_content_text_size"
                    android:textColorHint="#ff9fa0a0"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_new_note_dialog_yes_no_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/player_dialog_new_note_content_yes_no_container_height"
                android:layout_alignParentBottom="true"
                android:translationZ="@dimen/player_dialog_new_note_content_yes_no_container_translation_z">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:id="@+id/player_new_note_dialog_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/player_dialog_add_voc_to_note_content_yes_no_container_margin"
                        android:layout_alignParentRight="true"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player_dialog_new_note_yes"
                            android:textSize="@dimen/player_dialog_add_voc_to_note_content_text_size"
                            android:textColor="@color/green_1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/player_new_note_dialog_no"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/player_dialog_add_voc_to_note_content_yes_no_container_margin"
                        android:layout_toLeftOf="@+id/player_new_note_dialog_yes"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/player_dialog_new_note_no"
                            android:textSize="@dimen/player_dialog_add_voc_to_note_content_text_size"
                            android:textColor="@color/green_1"/>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</wishcantw.vocabulazy.activities.player.view.PlayerNewNoteDialogView>